<resources>
    <string name="app_name">Weekly Specials</string>
    <string name="weekly_specials">Weekly Specials</string>
    <string name="search">Search</string>
    <string name="enter_item_to_search">Enter item to search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="woolies_search_results">Woolies Search Results</string>
    <string name="view_shopping_list">Shopping List</string>
    <string name="item_details">Item Details</string>
    <string name="special_price">Special Price</string>
    <string name="todo">TODO</string>
    <string name="original_price">Original price</string>
    <string name="_0_00_100g">$0.00 / 100G</string>
    <string name="savings">Savings</string>
    <string name="woolies">Check Woolies</string>
    <string name="coles">Check Coles</string>
    <string name="other_shop">Other Shop</string>
    <string name="enter_item">Enter item description</string>
    <string name="add_to_list">+</string>
    <string name="return_to_main_screen">Return to Main Screen</string>
    <string name="list_cost">&lt;b>Cost:&lt;/b> $%.2f</string>
    <string name="list_qty">&lt;b>Qty:&lt;/b> %d</string>
    <string name="shopping_lists">Shopping Lists</string>
    <string name="woolies_list">Woolies List</string>
    <string name="coles_list">Coles List</string>
    <string name="item_description">Item Description</string>
    <string name="total_cost">Total Cost: $%.2f</string>
    <string name="save_shopping_lists">Save Lists</string>
    <string name="load_shopping_lists">Load Lists</string>
    <string name="clear_list">Clear Lists</string>
    <string name="edit_cost">Cost</string>
    <string name="edit_qty">Qty</string>
    <string name="to">To:</string>
    <string name="subject">Subject:</string>
    <string name="message">Message:</string>
    <string name="send">Send</string>
</resources>