<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtVTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/weekly_specials"
        android:textSize="30sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnWooliesSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/woolies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnColesSearch"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnColesSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/coles"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnWooliesSearch" />

    <Button
        android:id="@+id/btnViewList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/view_shopping_list"
        app:layout_constraintBottom_toTopOf="@id/btnWooliesSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTSearchEntry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/enter_item_to_search"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnViewList"
        app:layout_constraintEnd_toStartOf="@id/txtVSpecials"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtVSpecials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Specials Only: "
        app:layout_constraintStart_toEndOf="@+id/editTSearchEntry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/switchSpecial"/>

    <Switch
        android:id="@+id/switchSpecial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        app:layout_constraintStart_toEndOf="@id/editTSearchEntry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnViewList"/>


</androidx.constraintlayout.widget.ConstraintLayout>