<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".EmailListActivity">

    <TextView
        android:id="@+id/txtVRecipient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTRecipient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        app:layout_constraintTop_toBottomOf="@+id/txtVRecipient"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/txtVSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTRecipient"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/editTSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailSubject|textCapSentences"
        android:imeOptions="actionNext"
        app:layout_constraintTop_toBottomOf="@+id/txtVSubject"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/txtVMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTSubject"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/editTMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="10"
        android:inputType="textCapSentences|textMultiLine|textAutoCorrect"
        android:gravity="start|top"
        android:imeOptions="actionDone"
        app:layout_constraintTop_toBottomOf="@+id/txtVMessage"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/btnSendEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>